# ChangeLog for net-dns/libidn
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/ChangeLog,v 1.99 2009/05/30 16:37:52 jer Exp $

  30 May 2009; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Take up maintainership.

  21 May 2009; Jeroen Roovers <jer@gentoo.org>
  -files/0.6.9-javacflags.patch, -libidn-1.0-r1.ebuild,
  -libidn-1.5-r1.ebuild, -libidn-1.8.ebuild, -libidn-1.9-r1.ebuild,
  -libidn-1.11.ebuild:
  Remove old.

  21 May 2009; Brent Baude <ranger@gentoo.org> libidn-1.13.ebuild:
  stable ppc, bug 268317

  07 May 2009; Raúl Porcel <armin76@gentoo.org> libidn-1.13.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #268317

  05 May 2009; Jeroen Roovers <jer@gentoo.org> libidn-1.13.ebuild:
  Stable for HPPA (bug #268317).

  03 May 2009; Markus Meier <maekke@gentoo.org> libidn-1.13.ebuild:
  amd64/x86 stable, bug #268317

  03 May 2009; Brent Baude <ranger@gentoo.org> libidn-1.13.ebuild:
  Marking libidn-1.13 ppc64 for bug 268317

*libidn-1.14 (02 May 2009)

  02 May 2009; Jeroen Roovers <jer@gentoo.org> +libidn-1.14.ebuild:
  Version bump.

  22 Mar 2009; Harald van Dĳk <truedfx@gentoo.org> libidn-1.13.ebuild:
  Fix typo in emacs filename (#263390)

*libidn-1.13 (22 Mar 2009)

  22 Mar 2009; MATSUU Takuto <matsuu@gentoo.org> +libidn-1.13.ebuild:
  Version bumped. Fixed java-pkg_newjar.

*libidn-1.11 (27 Nov 2008)

  27 Nov 2008; Jeroen Roovers <jer@gentoo.org> +libidn-1.11.ebuild:
  Version bump (bug #246511 thanks to Arfrever Frehtes Taifersar Arahesis).

  12 Oct 2008; Ulrich Mueller <ulm@gentoo.org> libidn-1.9-r1.ebuild:
  Specify name of Emacs site-init file explicitely.

*libidn-1.9-r1 (03 Sep 2008)

  03 Sep 2008; Ulrich Mueller <ulm@gentoo.org> +files/50libidn-gentoo.el,
  -libidn-1.9.ebuild, +libidn-1.9-r1.ebuild:
  Byte-compile elisp files; add a site-init file; bug 187332. Setup config
  options with use_enable. Don't inherit autotools.eclass since it is unused.