@@ -1,24 +1,28 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/libidn-1.11.ebuild,v 1.1 2008/11/27 21:33:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/libidn-1.15.ebuild,v 1.1 2009/06/09 20:56:09 jer Exp $
 
 inherit java-pkg-opt-2 mono elisp-common
 
 DESCRIPTION="Internationalized Domain Names (IDN) implementation"
 HOMEPAGE="http://www.gnu.org/software/libidn/"
-SRC_URI="ftp://alpha.gnu.org/pub/gnu/libidn/${P}.tar.gz"
+SRC_URI="mirror://gnu/libidn/${P}.tar.gz"
 
 LICENSE="LGPL-2.1 GPL-3"
 SLOT="0"
 KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE="java doc emacs mono nls"
+IUSE="doc emacs java mono nls"
 
 COMMON_DEPEND="emacs? ( virtual/emacs )
 	mono? ( >=dev-lang/mono-0.95 )"
 DEPEND="${COMMON_DEPEND}
+	nls? ( >=sys-devel/gettext-0.17 )
 	java? ( >=virtual/jdk-1.4 dev-java/gjdoc )"
 RDEPEND="${COMMON_DEPEND}
+	nls? ( virtual/libintl )
 	java? ( >=virtual/jre-1.4 )"
+
+SITEFILE=50${PN}-gentoo.el
 
 src_unpack() {
 	unpack ${A}
@@ -48,19 +52,17 @@ src_install() {
 	if use emacs; then
 		# *.el are installed by the build system
 		elisp-install ${PN} src/*.elc || die
-		elisp-site-file-install "${FILESDIR}/50${PN}-gentoo.el" || die
+		elisp-site-file-install "${FILESDIR}/${SITEFILE}" || die
 	else
 		rm -rf "${ED}/usr/share/emacs"
 	fi
-
-	#use xemacs || rm -rf "${ED}/usr/lib/xemacs"
 
 	if use doc ; then
 		dohtml -r doc/reference/html/* || die
 	fi
 
 	if use java ; then
-		java-pkg_newjar "${ED}"/usr/share/java/${P}.jar || die
+		java-pkg_newjar java/${P}.jar ${PN}.jar || die
 		rm -rf "${ED}"/usr/share/java || die
 
 		if use doc ; then
